Cập nhật giao diện

--- a/src/app/pages/ui-components/areas/areas.component.scss
+++ b/src/app/pages/ui-components/areas/areas.component.scss
@@ -8,28 +8,12 @@
     width: 150px;
   }
   
-  .mat-column-distributorCode {
+  .mat-column-areaCode {
     width: 150px;
   }
   
-  .mat-column-distributorName {
+  .mat-column-areaName {
     width: 200px;
-  }
-  
-  .mat-column-address {
-    width: 200px;
-  }
-  
-  .mat-column-phoneNumber {
-    width: 150px;
-  }
-  
-  .mat-column-area {
-    width: 150px;
-  }
-  
-  .mat-column-isActive {
-    width: 100px;
   }
   
   .mat-column-createdAt {
