--- a/src/app/pages/ui-components/lines/lines.component.scss
+++ b/src/app/pages/ui-components/lines/lines.component.scss
@@ -8,24 +8,12 @@
     width: 150px;
   }
   
-  .mat-column-distributorCode {
+  .mat-column-lineNumber {
     width: 150px;
   }
   
-  .mat-column-distributorName {
+  .mat-column-lineName {
     width: 200px;
-  }
-  
-  .mat-column-address {
-    width: 200px;
-  }
-  
-  .mat-column-phoneNumber {
-    width: 150px;
-  }
-  
-  .mat-column-area {
-    width: 150px;
   }
   
   .mat-column-isActive {
