--- a/src/app/pages/ui-components/product-information/product-informations.component.scss
+++ b/src/app/pages/ui-components/product-information/product-informations.component.scss
@@ -8,23 +8,19 @@
     width: 150px;
   }
   
-  .mat-column-distributorCode {
+  .mat-column-productCode {
     width: 150px;
   }
   
-  .mat-column-distributorName {
-    width: 200px;
+  .mat-column-productName {
+    width: 250px;
   }
   
-  .mat-column-address {
-    width: 200px;
+  .mat-column-unit {
+    width: 100px;
   }
   
-  .mat-column-phoneNumber {
-    width: 150px;
-  }
-  
-  .mat-column-area {
+  .mat-column-weightPerUnit {
     width: 150px;
   }
   
