--- a/src/app/pages/authentication/login/login.component.html
+++ b/src/app/pages/authentication/login/login.component.html
@@ -5,7 +5,7 @@
         <mat-card-content class="p-32">
           <div class="text-center">
             <a>
-              <img src="../../../../assets/images/logos/matech-logo.svg" class="align-middle m-2" alt="logo" />
+              <img src="../../../../assets/images/logos/phanbonhalan.png" class="align-middle m-2" alt="logo" />
             </a>
           </div>
           <mat-card-title>Log in</mat-card-title>
@@ -27,10 +27,10 @@
               </div>
             </mat-form-field>
 
-            <div class="d-flex align-items-center m-b-12">
+            <!-- <div class="d-flex align-items-center m-b-12">
               <a [routerLink]="['/authentication/forgot-password']"
                 class="text-primary f-w-600 text-decoration-none m-l-auto f-s-14">Forgot Password ?</a>
-            </div>
+            </div> -->
 
             <button mat-flat-button color="primary" class="w-100" type="submit" [disabled]="!loginForm.valid">
               Sign In
