--- a/src/app/pages/ui-components/distributors/distributors.component.html
+++ b/src/app/pages/ui-components/distributors/distributors.component.html
@@ -1,216 +1,114 @@
 <mat-card class="cardWithShadow theme-card">
-    <mat-card-header>
-      <mat-card-title class="m-b-0">Distributors</mat-card-title>
-      <span class="flex-1-auto"></span>
-  
-      <button
-        mat-flat-button
-        color="primary"
-        matTooltipPosition="left"
-        class="m-l-8"
-        matTooltipHideDelay="100000"
-        (click)="addDistributor()"
-      >
-        <mat-icon>add</mat-icon> <span fxHide.xs>Create new distributor</span>
-      </button>
-      <!-- Thêm nút Import -->
+  <mat-card-header>
+    <mat-card-title class="m-b-0">Distributors</mat-card-title>
+    <span class="flex-1-auto"></span>
     <button
-    mat-flat-button
-    color="accent"
-    matTooltipPosition="left"
-    class="m-l-8"
-    matTooltipHideDelay="100000"
-    (click)="triggerFileInput()"
-  >
-    <mat-icon>upload_file</mat-icon> <span fxHide.xs>Import from Excel</span>
-  </button>
-  <input
-    type="file"
-    #fileInput
-    style="display: none"
-    (change)="onFileChange($event)"
-    accept=".xlsx, .xls"
-  />
-  <button
-  mat-flat-button
-  color="accent"
-  matTooltipPosition="left"
-  class="m-l-8"
-  matTooltipHideDelay="100000"
-  (click)="downloadTemplate()"
->
-  <mat-icon>download</mat-icon> <span fxHide.xs>Download Template</span>
-</button>
-    </mat-card-header>
-  
-    <mat-card-content class="b-t-1">
-      <div class="table-responsive m-t-16">
-        <mat-form-field class="w-100" appearance="outline">
-          <input
-            matInput
-            type="text"
-            (keyup)="doFilter($any($event).target.value)"
-            placeholder="Search...."
-          >
-        </mat-form-field>
-  
-        <table mat-table [dataSource]="dataSource" class="w-100" matSort>
-          <ng-container matColumnDef="action">
-            <th
-              mat-header-cell
-              *matHeaderCellDef
-              class="f-w-600 mat-subtitle-1 f-s-14"
+      mat-flat-button
+      color="primary"
+      matTooltipPosition="left"
+      class="m-l-8"
+      matTooltipHideDelay="100000"
+      (click)="addDistributor()"
+    >
+      <mat-icon>add</mat-icon> <span fxHide.xs>Create new distributor</span>
+    </button>
+    <button
+      mat-flat-button
+      color="accent"
+      matTooltipPosition="left"
+      class="m-l-8"
+      matTooltipHideDelay="100000"
+      (click)="triggerFileInput()"
+    >
+      <mat-icon>upload_file</mat-icon> <span fxHide.xs>Import from Excel</span>
+    </button>
+    <!-- Thêm input file ẩn -->
+    <input
+      type="file"
+      #fileInput
+      (change)="onFileChange($event)"
+      style="display: none;"
+      accept=".xls,.xlsx"
+    />
+  </mat-card-header>
+
+  <mat-card-content class="b-t-1">
+    <div class="table-responsive m-t-16">
+      <mat-form-field class="w-100" appearance="outline">
+        <input matInput type="text" (keyup)="doFilter($any($event).target.value)" placeholder="Search....">
+      </mat-form-field>
+
+      <table mat-table [dataSource]="dataSource" class="w-100" matSort>
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Action</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">
+            <button
+              mat-flat-button
+              color="primary"
+              [matMenuTriggerFor]="actions"
+              class="m-t-8"
             >
-              Action
-            </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
-              <button
-                mat-flat-button
-                color="primary"
-                [matMenuTriggerFor]="actions"
-                class="m-t-8"
-              >
-                Action<mat-icon>arrow_drop_down</mat-icon>
-              </button>
-              <mat-menu class="cardWithShadow" #actions="matMenu">
-                <button mat-menu-item (click)="updateDistributor(element.id)">
-                  Edit
-                </button>
-                <button mat-menu-item (click)="deleteDistributor(element.id)">
-                  Delete
-                </button>
-              </mat-menu>
-            </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="distributorCode">
-            <th
-              mat-header-cell
-              *matHeaderCellDef
-              class="f-w-600 mat-subtitle-1 f-s-14"
-              mat-sort-header
-            >
-              Distributor Code
-            </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
-              {{ element.distributorCode }}
-            </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="distributorName">
-            <th
-              mat-header-cell
-              *matHeaderCellDef
-              class="f-w-600 mat-subtitle-1 f-s-14"
-              mat-sort-header
-            >
-              Distributor Name
-            </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
-              {{ element.distributorName }}
-            </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="address">
-            <th
-              mat-header-cell
-              *matHeaderCellDef
-              class="f-w-600 mat-subtitle-1 f-s-14"
-              mat-sort-header
-            >
-              Address
-            </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
-              {{ element.address }}
-            </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="phoneNumber">
-            <th
-              mat-header-cell
-              *matHeaderCellDef
-              class="f-w-600 mat-subtitle-1 f-s-14"
-              mat-sort-header
-            >
-              Phone Number
-            </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
-              {{ element.phoneNumber }}
-            </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="contactSource">
-            <th
-              mat-header-cell
-              *matHeaderCellDef
-              class="f-w-600 mat-subtitle-1 f-s-14"
-            >
-              Contact Source
-            </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
-              {{ element.contactSource }}
-            </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="area">
-            <th
-              mat-header-cell
-              *matHeaderCellDef
-              class="f-w-600 mat-subtitle-1 f-s-14"
-              mat-sort-header
-            >
-              Area
-            </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
-              {{ element.area }}
-            </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="note">
-            <th
-              mat-header-cell
-              *matHeaderCellDef
-              class="f-w-600 mat-subtitle-1 f-s-14"
-            >
-              Note
-            </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
-              {{ element.note }}
-            </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="isActive">
-            <th
-              mat-header-cell
-              *matHeaderCellDef
-              class="f-w-600 mat-subtitle-1 f-s-14"
-            >
-              Active
-            </th>
-            <td mat-cell *matCellDef="let element">
-              <ng-template [ngIf]="element.isActive">
-                <span
-                  class="bg-light-accent text-accent rounded f-w-600 p-6 p-y-4 f-s-12"
-                >
-                  Yes
-                </span>
-              </ng-template>
-              <ng-template [ngIf]="!element.isActive">
-                <span
-                  class="bg-light-warning text-warning rounded f-w-600 p-6 p-y-4 f-s-12"
-                >
-                  No
-                </span>
-              </ng-template>
-            </td>
-          </ng-container>
-  
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
-      </div>
-  
-      <mat-paginator [pageSize]="4" [pageSizeOptions]="[4, 6, 10, 20]">
-      </mat-paginator>
-    </mat-card-content>
-  </mat-card>
+              Action<mat-icon>arrow_drop_down</mat-icon>
+            </button>
+            <mat-menu class="cardWithShadow" #actions="matMenu">
+              <button mat-menu-item (click)="updateDistributor(element.id)">Edit</button>
+              <button mat-menu-item (click)="deleteDistributor(element.id)">Delete</button>
+            </mat-menu>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="distributorCode">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Distributor Code</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.distributorCode }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="distributorName">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Distributor Name</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.distributorName }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="address">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Address</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.address }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="phoneNumber">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Phone Number</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.phoneNumber }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="area">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Area</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.area?.areaName || 'N/A' }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="isActive">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Active</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">
+            <ng-template [ngIf]="element.isActive">
+              <span class="bg-light-accent text-accent rounded f-w-600 p-6 p-y-4 f-s-12">Yes</span>
+            </ng-template>
+            <ng-template [ngIf]="!element.isActive">
+              <span class="bg-light-warning text-warning rounded f-w-600 p-6 p-y-4 f-s-12">No</span>
+            </ng-template>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="createdAt">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Created At</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.createdAt | date: 'yyyy-MM-dd' }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="updatedAt">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Updated At</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.updatedAt | date: 'yyyy-MM-dd' }}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </div>
+
+    <mat-paginator [pageSize]="4" [pageSizeOptions]="[4, 6, 10, 20]"></mat-paginator>
+  </mat-card-content>
+</mat-card>
