--- a/src/app/pages/ui-components/orders/orders.component.html
+++ b/src/app/pages/ui-components/orders/orders.component.html
@@ -74,7 +74,7 @@
               <a
                 [routerLink]="['/ui-components/order-details', element.id]"
                 [ngClass]="getStatusClass(element.status)"
-                style="cursor: pointer; text-decoration: underline;"
+                class="status-link"
               >
                 {{ getStatusText(element.status) }}
               </a>
@@ -86,25 +86,14 @@
             </ng-template>
           </td>
         </ng-container>
-        <!-- <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-            Status
-          </th>
-          <td mat-cell *matCellDef="let element" class="mat-body-1">
-            <span [ngClass]="getStatusClass(element.status)">
-              {{ getStatusText(element.status) }}
-            </span>
-          </td>
-        </ng-container> -->
         <ng-container matColumnDef="code">
           <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
             Order Code
           </th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">
-            {{ element.code }}
+            {{ element.orderCode }}
           </td>
         </ng-container>
-
         <ng-container matColumnDef="exportDate">
           <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
             Export Date
@@ -113,16 +102,14 @@
             {{ element.exportDate | date: 'dd/MM/yyyy' }}
           </td>
         </ng-container>
-
         <ng-container matColumnDef="quantityVehicle">
           <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
             Driver Count
           </th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">
-            {{ element.quantityVehicle }}
+            {{ element.driverNumber }}
           </td>
         </ng-container>
-
         <ng-container matColumnDef="vehicleNumber">
           <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
             Vehicle Number
@@ -131,7 +118,6 @@
             {{ element.vehicleNumber }}
           </td>
         </ng-container>
-
         <ng-container matColumnDef="driverName">
           <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
             Driver Name
@@ -140,7 +126,6 @@
             {{ element.driverName }}
           </td>
         </ng-container>
-
         <ng-container matColumnDef="driverPhoneNumber">
           <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
             Driver Phone Number
@@ -149,58 +134,52 @@
             {{ element.driverPhoneNumber }}
           </td>
         </ng-container>
-
         <ng-container matColumnDef="weightOrder">
           <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
             Weight (kg)
           </th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">
-            {{ element.weightOrder }}
+            {{ element.orderDetail?.requestedWeight }}
           </td>
         </ng-container>
-
         <ng-container matColumnDef="unitOrder">
           <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
             Quantity (bags)
           </th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">
-            {{ element.unitOrder }}
+            {{ element.orderDetail?.requestedUnits }}
           </td>
         </ng-container>
-
         <ng-container matColumnDef="manufactureDate">
           <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
             Manufacture Date
           </th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">
-            {{ element.manufactureDate | date: 'dd/MM/yyyy' }}
+            {{ element.orderDetail?.manufactureDate | date: 'dd/MM/yyyy' }}
           </td>
         </ng-container>
-
         <ng-container matColumnDef="productName">
           <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
             Product Name
           </th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">
-            {{ element.productInformation?.productName || 'N/A' }}
+            {{ element.orderDetail?.productName || 'N/A' }}
           </td>
         </ng-container>
-
         <ng-container matColumnDef="distributorName">
           <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
             Distributor Name
           </th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">
-            {{ element.distributor?.distributorName || 'N/A' }}
+            {{ element.distributorName || 'N/A' }}
           </td>
         </ng-container>
-
         <ng-container matColumnDef="area">
           <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
             Area
           </th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">
-            {{ element.distributor?.area || 'N/A' }}
+            {{ element.area || 'N/A' }}
           </td>
         </ng-container>
 
