--- a/src/app/pages/ui-components/product-information/product-informations.component.html
+++ b/src/app/pages/ui-components/product-information/product-informations.component.html
@@ -1,144 +1,118 @@
 <mat-card class="cardWithShadow theme-card">
-    <mat-card-header>
-      <mat-card-title class="m-b-0">Product Informations</mat-card-title>
-      <span class="flex-1-auto"></span>
-  
-      <button
-        mat-flat-button
-        color="primary"
-        matTooltipPosition="left"
-        class="m-l-8"
-        matTooltipHideDelay="100000"
-        (click)="addProductInformation()"
-      >
-        <mat-icon>add</mat-icon> <span fxHide.xs>Create new product information</span>
-      </button>
-      <button
-    mat-flat-button
-    color="accent"
-    matTooltipPosition="left"
-    class="m-l-8"
-    matTooltipHideDelay="100000"
-    (click)="triggerFileInput()"
-  >
-    <mat-icon>upload_file</mat-icon> <span fxHide.xs>Import from Excel</span>
-  </button>
-  <input
-    type="file"
-    #fileInput
-    style="display: none"
-    (change)="onFileChange($event)"
-    accept=".xlsx, .xls"
-  />
-  <input
-  type="file"
-  #fileInput
-  style="display: none"
-  (change)="onFileChange($event)"
-  accept=".xlsx, .xls"
-/>
-<button
-mat-flat-button
-color="accent"
-matTooltipPosition="left"
-class="m-l-8"
-matTooltipHideDelay="100000"
-(click)="downloadTemplate()"
->
-<mat-icon>download</mat-icon> <span fxHide.xs>Download Template</span>
-</button>
-    </mat-card-header>
-  
-    <mat-card-content class="b-t-1">
-      <div class="table-responsive m-t-16">
-        <mat-form-field class="w-100" appearance="outline">
-          <input matInput type="text" (keyup)="doFilter($any($event).target.value)" placeholder="Search....">
-        </mat-form-field>
-  
-        <table mat-table [dataSource]="dataSource" class="w-100" matSort>
-          <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
-              Action
-            </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
-              <button
-                mat-flat-button
-                color="primary"
-                [matMenuTriggerFor]="actions"
-                class="m-t-8"
-              >
-                Action<mat-icon>arrow_drop_down</mat-icon>
-              </button>
-              <mat-menu class="cardWithShadow" #actions="matMenu">
-                <button mat-menu-item (click)="updateProductInformation(element.id)">
-                  Edit
-                </button>
-                <button mat-menu-item (click)="deleteProductInformation(element.id)">
-                  Delete
-                </button>
-              </mat-menu>
-            </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="productCode">
-            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-              Product Code
-            </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
-              {{ element.productCode }}
-            </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="productName">
-            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-              Product Name
-            </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
-              {{ element.productName }}
-            </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="unit">
-            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-              Unit
-            </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
-              {{ element.unit }}
-            </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="weight">
-            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-              Weight
-            </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
-              {{ element.weight }}
-            </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="isActive">
-            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
-              Active
-            </th>
-            <td mat-cell *matCellDef="let element">
-              <ng-template [ngIf]="element.isActive">
-                <span class="bg-light-accent text-accent rounded f-w-600 p-6 p-y-4 f-s-12">
-                  Yes
-                </span>
-              </ng-template>
-              <ng-template [ngIf]="!element.isActive">
-                <span class="bg-light-warning text-warning rounded f-w-600 p-6 p-y-4 f-s-12">
-                  No
-                </span>
-              </ng-template>
-            </td>
-          </ng-container>
-  
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
-      </div>
-  
-      <mat-paginator [pageSize]="4" [pageSizeOptions]="[4, 6, 10, 20]"></mat-paginator>
-    </mat-card-content>
-  </mat-card>
+  <mat-card-header>
+    <mat-card-title class="m-b-0">Product Informations</mat-card-title>
+    <span class="flex-1-auto"></span>
+    <button
+      mat-flat-button
+      color="primary"
+      matTooltipPosition="left"
+      class="m-l-8"
+      matTooltipHideDelay="100000"
+      (click)="addProductInformation()"
+    >
+      <mat-icon>add</mat-icon> <span fxHide.xs>Create new product information</span>
+    </button>
+    <button
+      mat-flat-button
+      color="accent"
+      matTooltipPosition="left"
+      class="m-l-8"
+      matTooltipHideDelay="100000"
+      (click)="triggerFileInput()"
+    >
+      <mat-icon>upload_file</mat-icon> <span fxHide.xs>Import from Excel</span>
+    </button>
+    <button
+      mat-flat-button
+      color="accent"
+      matTooltipPosition="left"
+      class="m-l-8"
+      matTooltipHideDelay="100000"
+      (click)="downloadTemplate()"
+    >
+      <mat-icon>download</mat-icon> <span fxHide.xs>Download Template</span>
+    </button>
+    <input
+      type="file"
+      #fileInput
+      (change)="onFileChange($event)"
+      style="display: none;"
+      accept=".xls,.xlsx"
+    />
+  </mat-card-header>
+
+  <mat-card-content class="b-t-1">
+    <div class="table-responsive m-t-16">
+      <mat-form-field class="w-100" appearance="outline">
+        <input matInput type="text" (keyup)="doFilter($any($event).target.value)" placeholder="Search....">
+      </mat-form-field>
+
+      <table mat-table [dataSource]="dataSource" class="w-100" matSort>
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Action</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">
+            <button
+              mat-flat-button
+              color="primary"
+              [matMenuTriggerFor]="actions"
+              class="m-t-8"
+            >
+              Action<mat-icon>arrow_drop_down</mat-icon>
+            </button>
+            <mat-menu class="cardWithShadow" #actions="matMenu">
+              <button mat-menu-item (click)="updateProductInformation(element.id)">Edit</button>
+              <button mat-menu-item (click)="deleteProductInformation(element.id)">Delete</button>
+            </mat-menu>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="productCode">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Product Code</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.productCode }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="productName">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Product Name</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.productName }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="unit">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Unit</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.unit }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="weightPerUnit">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Weight Per Unit</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.weightPerUnit }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="isActive">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Active</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">
+            <ng-template [ngIf]="element.isActive">
+              <span class="bg-light-accent text-accent rounded f-w-600 p-6 p-y-4 f-s-12">Yes</span>
+            </ng-template>
+            <ng-template [ngIf]="!element.isActive">
+              <span class="bg-light-warning text-warning rounded f-w-600 p-6 p-y-4 f-s-12">No</span>
+            </ng-template>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="createdAt">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Created At</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.createdAt | date: 'yyyy-MM-dd' }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="updatedAt">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Updated At</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.updatedAt | date: 'yyyy-MM-dd' }}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </div>
+
+    <mat-paginator [pageSize]="4" [pageSizeOptions]="[4, 6, 10, 20]"></mat-paginator>
+  </mat-card-content>
+</mat-card>
